--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 services:
+
+
   postgres:
     image: postgres:17
     ports:
@@ -19,6 +21,7 @@ services:
       - "9090:8080"
     command:
       - start-dev
+      - --features=preview
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
