--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,27 @@
 spring.application.name=spring-boot-redis-cache
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# ===============================
+# PostgreSQL Database Configuration
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_product_redis
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# ===============================
+# Redis Configuration
+# ===============================
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+
+server.port=${PORT:8080}
